		which is needed by gdb when running inside the emulator.
		Also enabling ARM UND exceptions for ARM floating point
		instructions (needed by both Linux and NetBSD/arm).
20081103	Fix for a free() bug in bootblock_iso9660.c.
		Updating the OpenBSD/landisk installation instructions from
		4.2 to 4.4, after verifying that it works.
20081104	NOTE: I'm throwing away the C++ rewrite attempt ("0.5.x"),
		moving back gxemul-legacy to gxemul/trunk. The old C++
		rewrite attempt is archived under gxemul/branches/.
20081109	Updating most NetBSD 4.0 install instructions to 4.0.1.

==============  RELEASE 0.4.6.6  ==============

20081114	Adding the M88K 'add' instruction for immediate values
		(add_imm in cpu_m88k_instr.c).
		Continuing on dev_pcc2 (used by mvme187).
		Working on M88K interrupts. Very unstable so far; OpenBSD/
		mvme88k bugs out randomly after the first few interrupts.
20081115	More work on dev_pcc2.
		Found the "random" failure bug: the M88K interrupt handling
		code didn't execute the interrupted instruction, but skipped
		it instead.
		Fixing a bug in the implementation of the m88k 'ext'
		instruction (it worked like extu!).
		Adding disassembly of all 88100 floating point instructions.
		Minor updates to make the code build with GCC "4.4.0 20081017".
20081116	Implementing the m88k flt.ss, flt.ds, trnc.ss, trnc.sd, and
		fadd.dds floating point instructions.
20081121	Updating the HelenOS version in the documentation to 0.3.0.
		Continuing on 88100 interrupt/exception handling.
20081125	Bringing back the dummy machine_iyonix.c, which was removed
		in SVN rev. 4866.
		Fixing a bug in ARM pc-relative loads, when loading within
		the same page as the pc.
20081126	Continuing on the Iyonix mode: connecting initial i80321
		interrupts, and importing NetBSD/iyonix' bootconfig.h.
20081127	Importing iopi2creg.h from NetBSD (ARM Xscale I2C registers).
		Implementing the SH4 fsrra instruction, 1/sqrt(x), and the
		fipr instruction (vector dot-product).